Revise Java 17 to 21 migration skill documentation
Updated the Java 17 to 21 migration skill documentation to clarify assessment and validation processes, including changes to usage instructions and workflow steps.